Bug 455627 - Airbrush (Pixel Brush Engine - Color - Airbrush) cause mismatch between holding angle and brush tip angle when canvas is rotated
Summary: Airbrush (Pixel Brush Engine - Color - Airbrush) cause mismatch between holdi...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.0.6
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: testcase, triaged
Depends on:
Blocks:
 
Reported: 2022-06-20 01:59 UTC by kousakiaya
Modified: 2023-10-03 09:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Recording of the mismatch (2.35 MB, video/mp4)
2022-06-20 01:59 UTC, kousakiaya
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kousakiaya 2022-06-20 01:59:16 UTC
Created attachment 149938 [details]
Recording of the mismatch

SUMMARY
Plz, refer to https://krita-artists.org/t/when-the-angle-of-brush-tip-is-linked-with-actual-holding-angle-the-rotation-of-canvas-cuase-the-mismatch/42828 for a more explanatory description.

Using "WaterC Flat Decay Tilt" allows you to change the brush-tip angle by changing your holding angle.
Consider holding the pen so that the projection of the pen parallels the up\bottom edge of your tablet.  
When you change your holding angle by creating a 30-degree angle between pen projection and table edge,
the brush tip will rotate by 30 degrees. (30 can be replaced by any angle between 0 and 360)

If we treat the "parallel" situation as 0-degree default, then, normally, when the projection is paralleled with the tablet edge,
brush tip ('s direction, the default direction in this case) is paralleled with the Krita application window's up\bottom edge.
This should be the desired behaviour.

But, when Pixel Brush Engine - Color - Airbrush is activated, the brush tip will apply the rotation base on a default direction that is paralleled with the canvas up\bottom edge, not the window's top\bottom edge.

STEPS TO REPRODUCE
1. Select WaterC Flat Decay Tilt as your brush
2. Rotate the canvas with a noticeable degree 
3. Rotate your holding angle, and observe the mismatch.

OBSERVED RESULT

The angle of pen-holding and brush tip don't match.

EXPECTED RESULT
The angle of pen-holding and brush tip match.
Comment 1 wolthera 2023-01-26 14:02:10 UTC
Hi, thank you for your report.

I can confirm with the Krita Version: 5.2.0-prealpha (git 5c98a72) Appimage with Qt 5.15.7 and an Intuos 3, tilt preview makes it even more obvious.
Comment 2 Dmitry Kazakov 2023-10-03 09:10:22 UTC
Git commit 1c00768323d53beb2482e78d36bd5da1c5df64a4 by Dmitry Kazakov.
Committed on 03/10/2023 at 11:10.
Pushed by dkazakov into branch 'master'.

Fix brush rotation when using Airbrush mode

The painting information should be correctly initialized in all
the cases.

M  +3    -0    libs/ui/tool/kis_tool_freehand_helper.cpp

https://invent.kde.org/graphics/krita/-/commit/1c00768323d53beb2482e78d36bd5da1c5df64a4
Comment 3 Dmitry Kazakov 2023-10-03 09:11:36 UTC
Git commit e4bc916ddd1d7cc7edeb8711f9f73ee01bcb9700 by Dmitry Kazakov.
Committed on 03/10/2023 at 11:11.
Pushed by dkazakov into branch 'krita/5.2'.

Fix brush rotation when using Airbrush mode

The painting information should be correctly initialized in all
the cases.

M  +3    -0    libs/ui/tool/kis_tool_freehand_helper.cpp

https://invent.kde.org/graphics/krita/-/commit/e4bc916ddd1d7cc7edeb8711f9f73ee01bcb9700