Fix brush rotation when using Airbrush mode

The painting information should be correctly initialized in all
the cases.

BUG:455627